fix cardV1 in dark mode

--- a/styles/components/cardV1.less
+++ b/styles/components/cardV1.less
@@ -49,7 +49,11 @@
 
         padding: 8px 8px 8px 24px;
         box-sizing: border-box;
-        color: $$color;
+        color: $$color-black;
+    }
+
+    .name {
+        color: $$color-black-dark;
     }
 
     .link {
@@ -66,7 +70,7 @@
         border-radius: 2px;
         margin: 8px 0px;
 
-        color: $$color;
+        color: $$color-black;
         background-color: @theme-color-0;
         box-shadow: @box-shadow-2dp;
     }
@@ -89,7 +93,7 @@
             margin: 4px 8px 4px 0px;
             padding: 4px 8px;
             background-color: @theme-color-cyan;
-            color: $$color;
+            color: $$color-black;
         }
     }
 
